--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 HELP.md
 .gradle
 build/
-docker/
+docker/data
+docker/attachment/*.zip
 src/main/resources/application-*
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
